--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AppVerxo</string>
+    <string name="strng_text_hint">Enter the Ad ID</string>
+    <string name="strng_show_ad">Show Ad</string>
+    <string name="strng_text_header">Enter the ID of an active Ad to display it</string>
 </resources>
